--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>het eerste begin </title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    extra tekst
+  </body>
+</html>
