--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     hier komt mijn eerste tekst
 
-    <a href="binairstelsel.html"> </a>
+    <a href="binairstelsel.html">dit is het linkje </a>
     
   </body>
 </html>
