--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <body>
     hier komt mijn eerste tekst
 
+    <br>
+    <br>
+    
     <a href="binairstelsel.html">Uitleg binair stelsel</a>
+
+    <br>
+    <br>
+
+    <img scr="Mount-Everest.webp" alt="deze site is nog niet af">
     
   </body>
 </html>
