--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -8,7 +8,15 @@
   <body>
     extra tekst
 
+    <br>
+    <br>
+
     <a href="index.html">Home</a>
+
+    <br>
+    <br>
+
+    <img src="600x450-20211218-efteling-dicht.jpg" alt="efteling foto">
       
   </body>
 </html>
