--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -8,6 +8,10 @@
   <body>
     extra tekst
 
+<ul>
+  <li><a href="index.html"></a></li>
+  <li><a href="binairstelsel.html"></a></li>
+    
     <br>
     <br>
 
