--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href="index.html">home</a></li>
+  <li><a href="binairstelsel">efteling</a></li>
 </ul>
         
     <br>
