--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -9,8 +9,8 @@
     extra tekst
 
 <ul>
-  <li><a href="index.html"></a></li>
-  <li><a href="binairstelsel.html"></a></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="binairstelsel.html">efteling</a></li>
     
     <br>
     <br>
