--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <br>
 
-    <img scr="IMG_6899-1.jpg" alt="deze site is nog niet af">
+    <img scr="" alt="deze site is nog niet af">
     
   </body>
 </html>
