--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
   </head>
   <body>
-    hier komt mijn eerste tekst
 
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -16,7 +15,7 @@
     <br>
     <br>
 
-    <img scr="vug3zmzeswm41.webp" alt="deze site is nog niet af">
+    <img scr="images.png" alt="deze site is nog niet af">
     
   </body>
 </html>
