--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <br>
 
-    <img scr="house-4930614_640.jpg" alt="deze site is nog niet af">
+    <img src="house-4930614_640.jpg" alt="deze site is nog niet af">
     
   </body>
 </html>
