--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -1,1 +1,19 @@
 
+<!doctype>
+<html>
+  <head>
+    <title>het eerste begin</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    Uitleg over kleurmodellen
+
+    <br>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="binairstelsel.html">efteling</a></li>
+      <li><a href="kleurmodellen.html">kleurmodellen</a></li>
+    </ul>
+
+  </body>
+</html>
