--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="binairstelsel">efteling</a></li>
+  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
 </ul>
 
     <br>
