--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -11,6 +11,7 @@
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="binairstelsel.html">efteling</a></li>
+  <li><a herf="kleurmodellen.html">kleurmodellen</a></li>
 </ul>
 
     <br>
