--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -6,16 +6,13 @@
     <meta charset="utf-8">
   </head>
   <body>
-    extra tekst
-
+    mooie foto efteling wow
+<br>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="binairstelsel.html">efteling</a></li>
-  <li><a herf="kleurmodellen.html">kleurmodellen</a></li>
+  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
 </ul>
-
-    <br>
-    <br>
 
     <img src="600x450-20211218-efteling-dicht.jpg" alt="efteling foto">
       
