--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -15,7 +15,7 @@
       <li><a href="kleurmodellen.html">kleurmodellen</a></li>
     </ul>
 
-    <img src="hc_m_PxBegy9X2JC4sUfBmthjorasvj9yz3.jpeg" alt="kleurmodellen">
+    <img src="rgb-and-cmyk.jpg" alt="kleurmodellen">
 
   </body>
 </html>
