--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -5,6 +5,11 @@
     <title>het eerste begin</title>
     <meta charset="utf-8">
   </head>
+  <style>
+    ul {
+      list-style-type: none;
+    }
+    </style>
   <body>
     Uitleg over kleurmodellen
 
