--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -10,7 +10,7 @@
 
     <br>
     <ul>
-      <li><a href="index.html"><button type="button">Home</button></a></li>
+      <li><a href="index.html"></a></li>
       <li><a href="binairstelsel.html">efteling</a></li>
       <li><a href="kleurmodellen.html">kleurmodellen</a></li>
    </ul>
