--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>het eerste begin</title>
+    <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
   </head>
   <body>
