--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -7,14 +7,13 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Uitleg over kleurmodellen
-
     <br>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="binairstelsel.html">efteling</a></li>
       <li><a href="kleurmodellen.html">kleurmodellen</a></li>
    </ul>
+    uitleg kleurmodellen
 
     <img src="rgb-and-cmyk.jpg" alt="kleurmodellen">
 
