--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <br>
 
     <img src="house-4930614_640.jpg" alt="deze site is nog niet af">
+
+<footer>
+  <div class="container">
+    <p>&copy ; 2023 school project</p>
+    <p>contact: roland.slagter@vlietlandcollege.nl</p>
+  </div>
+</footer>
     
   </body>
 </html>
