--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -19,5 +19,12 @@
 
     <img src="rgb-and-cmyk.jpg" alt="kleurmodellen">
 
+    <footer>
+  <div class="container">
+    <p>&copy ; 2023 school project</p>
+    <p>contact: roland.slagter@vlietlandcollege.nl</p>
+  </div>
+</footer>
+
   </body>
 </html>
