--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -17,6 +17,13 @@
     <br>
 
     <img src="600x450-20211218-efteling-dicht.jpg" alt="efteling foto">
+
+    <footer>
+  <div class="container">
+    <p>&copy ; 2023 school project</p>
+    <p>contact: roland.slagter@vlietlandcollege.nl</p>
+  </div>
+</footer>
       
   </body>
 </html>
