--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
 
 <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="binairstelsel">efteling</a></li>
+  <li><a href="index.html">Homepage</a></li>
+  <li><a href="binairstelsel">binairstelsel</a></li>
   <li><a href="kleurmodellen.html">kleurmodellen</a></li>
 </ul>
 
