--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -8,8 +8,8 @@
   </head>
   <body>
 <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="binairstelsel.html">efteling</a></li>
+  <li><a href="index.html">Homepage</a></li>
+  <li><a href="binairstelsel.html">binairstelsel</a></li>
   <li><a href="kleurmodellen.html">kleurmodellen</a></li>
 </ul>
     <br>
