--- a/algemene_informatie.html
+++ b/algemene_informatie.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>het eerste begin </title>
+    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <meta charset="utf-8">
+  </head>
+  <body>
+
+<ul>
+  <li><a href="index.html">Homepage</a></li>
+  <li><a href="binairstelsel">binairstelsel</a></li>
+  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
+</ul>
+
+    <br>
+
+    <img src="" alt="deze site is nog niet af">
+
+<footer>
+  <div class="container">
+    <p>&copy ; 2023 school project</p>
+    <p>contact: roland.slagter@vlietlandcollege.nl</p>
+  </div>
+</footer>
+    
+  </body>
+</html>
