--- a/bestandsformaten.html
+++ b/bestandsformaten.html
@@ -16,7 +16,7 @@
 
     <br>
 
-    <img src="house-4930614_640.jpg" alt="deze site is nog niet af">
+    <img src="" alt="deze site is nog niet af">
 
 <footer>
   <div class="container">
