--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -11,6 +11,9 @@
   <li><a href="index.html">Homepage</a></li>
   <li><a href="binairstelsel.html">binairstelsel</a></li>
   <li><a href="kleurmodellen.html">kleurmodellen</a></li>
+  <li><a href="algemene_informatie.html">algemene informatie</a></li>
+  <li><a href="bestandsformaten.html">bestandsformaten</a></li>
+  <li><a href="compressie.html">compressie</a></li>
 </ul>
     <br>
     mooie foto efteling LOL
