--- a/compressie.html
+++ b/compressie.html
@@ -12,11 +12,14 @@
   <li><a href="index.html">Homepage</a></li>
   <li><a href="binairstelsel">binairstelsel</a></li>
   <li><a href="kleurmodellen.html">kleurmodellen</a></li>
+  <li><a href="algemene_informatie.html">algemene informatie</a></li>
+  <li><a href="bestandsformaten.html">bestandsformaten</a></li>
+  <li><a href="compressie.html">compressie</a></li>
 </ul>
 
     <br>
 
-    <img src="house-4930614_640.jpg" alt="deze site is nog niet af">
+    <img src="" alt="deze site is nog niet af">
 
 <footer>
   <div class="container">
