--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -16,7 +16,7 @@
   <li><a href="compressie.html">compressie</a></li>
 </ul>
     <br>
-    
+    het binair stelsel is het stelsel dat computers gebruiken waarin de getalen worden veranderd in een rij van de cijfers 1 en 0.
     <br>
 
     <img src="600x450-20211218-efteling-dicht.jpg" alt="efteling foto">
