--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -17,6 +17,7 @@
 </ul>
     <br>
     <p>het binair stelsel is het stelsel dat computers gebruiken waarin de getalen worden veranderd in een rij van de cijfers 1 en 0.</p>
+    <p>hoi hoi</p>
     <br>
 
     <img src="600x450-20211218-efteling-dicht.jpg" alt="efteling foto">
