--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -21,7 +21,7 @@
     een voorbeeld van een binair cijfer is: 1101 is in ons stelsel 13 en dit is hoe je dat kan zien. Van rechts naar links in de rij cijfers staan de 1 en 0 voor onze cijfers 1,2,4,8. De 1,4 en 8 staan aan en dat doe je bij elkaar en dan krijg je: 1+4+8 = 13. En zo werkt het biniar stelsel dus.
     <br>
 
-    <img src="600x450-20211218-efteling-dicht.jpg" alt="efteling foto">
+    <img src="" alt="efteling foto">
 
     <footer>
   <div class="container">
