--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -16,7 +16,8 @@
   <li><a href="compressie.html">compressie</a></li>
 </ul>
     <br>
-    <p>het binair stelsel is het stelsel dat computers gebruiken waarin de getalen worden veranderd in een rij van de cijfers 1 en 0. De 1 en 0 hebben een speciale plaats in de rij. Elke plaats staat voor een macht van 2 in ons stelsel en als je dan de cijfers die aan staan dus een 1 hebben bijelkaar optelt krijg je het cijfer in ons stelsel.
+    <p>het binair stelsel is het stelsel dat computers gebruiken waarin de getalen worden veranderd in een rij van de cijfers 1 en 0.
+      De 1 en 0 hebben een speciale plaats in de rij. Elke plaats staat voor een macht van 2 in ons stelsel en als je dan de cijfers die aan staan dus een 1 hebben bijelkaar optelt krijg je het cijfer in ons stelsel.
       Het binair stelsel wordt gebruikt bij elektronica, omdat het makkelijk is om te implementeren via aan en uit knoppen van de computer.</p>
     een voorbeeld van een binair cijfer is: 1101 is in ons stelsel 13 en dit is hoe je dat kan zien. Van rechts naar links in de rij cijfers staan de 1 en 0 voor onze cijfers 1,2,4,8. De 1,4 en 8 staan aan en dat doe je bij elkaar en dan krijg je: 1+4+8 = 13. En zo werkt het biniar stelsel dus.
     <br>
