--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -16,6 +16,7 @@
   <li><a href="compressie.html">compressie</a></li>
 </ul>
     <br>
+    <H1>Hoe werkt het binair stelsel? En hoe reken je het om naar ons stelsel?</H1>
     het binair stelsel is het stelsel dat computers gebruiken waarin de getalen worden veranderd in een rij van de cijfers 1 en 0. <br>
       De 1 en 0 hebben een speciale plaats in de rij. Elke plaats staat voor een macht van 2 in ons stelsel en als je dan de cijfers die <br>
       aan staan dus een 1 hebben bijelkaar optelt krijg je het cijfer in ons stelsel. <br>
