--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -23,6 +23,9 @@
       Het binair stelsel wordt gebruikt bij elektronica, omdat het makkelijk is om te implementeren via aan en uit knoppen van de computer.
     een voorbeeld van een binair cijfer is: 1101 is in ons stelsel 13 en dit is hoe je dat kan zien. Van rechts naar links in de rij cijfers staan de 1 en 0 voor onze cijfers 1,2,4,8. De 1,4 en 8 staan aan en dat doe je bij elkaar en dan krijg je: 1+4+8 = 13. En zo werkt het biniar stelsel dus.
     <br>
+    <H1>een ASCII tabel</H1>
+    een ASCII of een American Standart code of information tabel is een tabel waarin alle letters en cijfers een eigen code krijgen.<br>
+    Deze
 
     <img src="binairstelsel.jpg" alt="efteling foto">
 
