--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </ul>
 
     <br>
+    Mijn naam is Roland uit H4A en dit is de wibsite die ik heb gemaakt voor informatica.
+    <br>
+    <H1>Video over input en output van informatie</H1>
+    
 
     <img src="house-4930614_640.jpg" alt="deze site is nog niet af">
 
