--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     Mijn naam is Roland uit H4A en dit is de wibsite die ik heb gemaakt voor informatica.
     <br>
     <H1>Video over input en output van informatie</H1>
+    Op deze pagina kan je een filmpje vinden over de werking van een computer.
+
+    <video controls width="640" height="360">
+      <source src="https://www.youtube.com/watch?v=mCq8-xTH7jA&list=PLzdnOPI1iJNcsRwJhvksEo1tJqjIqWbN-&index=2" type="video/webm">
+    </video>
     
 
     <img src="house-4930614_640.jpg" alt="deze site is nog niet af">
