--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br>
     Mijn naam is Roland uit H4A en dit is de wibsite die ik heb gemaakt voor informatica.
     <br>
-    <H1>Video over wat een computer een computer maakt</H1>
+    <H1>Video over hoe een computer werkt</H1>
     Op deze pagina kan je een filmpje vinden over de werking van een computer.
 
     <br>
