--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <ul>
   <li><a href="index.html">Homepage</a></li>
-  <li><a href="binairstelsel.html">binair stelsel</a></li>
-  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
-  <li><a href="algemene_informatie.html">algemene informatie</a></li>
-  <li><a href="bestandsformaten.html">bestandsformaten</a></li>
-  <li><a href="compressie.html">compressie</a></li>
+  <li><a href="html_folder/binairstelsel.html">binair stelsel</a></li>
+  <li><a href="html_folder/kleurmodellen.html">kleurmodellen</a></li>
+  <li><a href="html_folder/algemene_informatie.html">algemene informatie</a></li>
+  <li><a href="html_folder/bestandsformaten.html">bestandsformaten</a></li>
+  <li><a href="html_folder/compressie.html">compressie</a></li>
 </ul>
 
     <br>
