--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -3,13 +3,13 @@
 <html>
   <head>
     <title>het eerste begin </title>
-    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <link rel="stylesheet" type="text/css" href="../opmaak.css">
     <meta charset="utf-8">
   </head>
   <body>
 
 <ul>
-  <li><a href="index.html">Homepage</a></li>
+  <li><a href="../index.html">Homepage</a></li>
   <li><a href="binairstelsel">binairstelsel</a></li>
   <li><a href="kleurmodellen.html">kleurmodellen</a></li>
   <li><a href="algemene_informatie.html">algemene informatie</a></li>
