--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -27,7 +27,7 @@
     een ASCII of een American Standart code of information tabel is een tabel waarin alle letters en cijfers een eigen code krijgen.<br>
     Deze
 
-    <img src="foto_folder/binairstelsel.jpg" alt="efteling foto">
+    <img src="foto_folder/binairstelsel.jpg" alt="foto binair stelsel">
 
     <footer>
   <div class="container">
