--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-
+    <main>
 <ul>
   <li><a href="index.html">Homepage</a></li>
   <li><a href="html_folder/binairstelsel.html">binair stelsel</a></li>
@@ -33,6 +33,6 @@
     <p>contact: roland.slagter@vlietlandcollege.nl</p>
   </div>
 </footer>
-    
+</main>    
   </body>
 </html>
