foto voor homepage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
    programeren zodat ik er later iets mee kan gaan doen. Het leuke aan informatica <br>
    vind ik tot nu toe om te zien dat wat jij zelf hebt gemaakt ook echt werkt als je <br>
    het probeert te gebruiken.
+
+   <img src="foto_folder/download.png" alt="onze school">
     
 <footer>
   <div class="container">
