--- a/html_folder/kleurmodellen.html
+++ b/html_folder/kleurmodellen.html
@@ -20,7 +20,7 @@
     uitleg kleurmodellen
 
     <br>
-    <img src="foto_folder/rgb-and-cmyk.jpg" alt="kleurmodellen">
+    <img src="../foto_folder/rgb-and-cmyk.jpg" alt="kleurmodellen">
 
     <footer>
   <div class="container">
