--- a/html_folder/compressie.html
+++ b/html_folder/compressie.html
@@ -19,7 +19,35 @@
 
     <br>
 
-    <img src="" alt="deze site is nog niet af">
+<H1>wat is compressie</H1>
+Compressie is het weergeven van gegevens dan hoe de oorspronkelijke <br>
+weergave eruitzag. Er zijn twee typen compressie, exact omkeerbaar <br>
+en niet-exact omkeerbaar.
+<br>
+<H1>exact omkeerbaare compressie</H1>
+Bij dit type compressie wordt er een exact kopie gemaakt van het origineel. <br>
+Dit wordt voraal gebruikt voor tekstbestanden, omdat je daar geen tekst gewoon <br>
+kan verwijderen. Exact omkeerbaare compressie wordt gedaan door vaak voorkomende <br>
+letters of woorden een eigen code van bits met een bepaalde bitlengte te geven. <br>
+De meest vookomende woorden of letters krijgen dan de kortste code terwijl de <br>
+minst voorkomende woorden of letters een lange code krijgen.
+<br>
+<H1>Niet exact omkeerbaare compressie</H1>
+Dit type compressie wordt voral gebruikt bij beeld of geluid. Hierbij wordt wel <br>
+informatie weggelaten zodat het plaatje of geluid kleiner wordt. de compressie <br>
+verwijderd de overbodige informatie. Een voorbeeld is als een bestand meer éénen <br>
+dan nullen heeft of andersom. De extra éénen of nullen worden dan met compressie <br>
+verwijderd zodat het bestand kleiner wordt. Hoe goed de compressie bij dit type <br>
+zal werken ligt aan hoe het bestand er van binnen uitziet. Als een bestand al een <br>
+keer door compressie heen is gegaan zal bij een tweede keer niks of weinig veranderen <br>
+als het bestand een patroon heeft zal het veel beter te comprimeren zijn. <br>
+Voorbeelden van niet exact omkeerbaare compressiealgoritmes zijn bijvoorbeeld JPEG waarbij <br>
+de kwaliteit verlaagd wordt, MP3 en AAC worden gebruikt voor geluidsbestanden en MPEG-2 <br>
+wordt gebruikt voor videobestanden en voor dvd of DVB.
+
+    <br>
+
+    <img src="../foto_folder/JPEGImageDeblockingUsingDeepLearningExample_01.png" alt="voorbeeld compressie JPEG">
 
 <footer>
   <div class="container">
