--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -21,6 +21,12 @@
 
     <img src="" alt="deze site is nog niet af">
 
+<div id="player">
+  <audio autoplay hidden>
+    <source src="../Free_Test_Data_1MB_MP3.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
 <footer>
   <div class="container">
     <p>&copy ; 2023 school project</p>
