--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -22,7 +22,7 @@
     <img src="" alt="deze site is nog niet af">
 
 <div id="player">
-  <audio autoplay hidden>
+  <audio autoplay hidden loop>
     <source src="../Free_Test_Data_1MB_MP3.mp3" type="audio/mpeg">
         als je dit leest speelt de test muziek voor de website niet
   </audio>
