--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
    <br>
 
-   <img src="foto_folder/download.png" alt="onze school">
+   <img src="plaatjes_folder/download.png" alt="onze school">
     
 <footer>
   <div class="container">
