--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -19,7 +19,7 @@
 
     <br>
 
-    <img src="../plaatjes_folder/Ghostscript_Tiger.svg" alt="deze site is nog niet af">
+    <img src="../plaatjes_folder/Ghostscript_Tiger.svg" alt="deze site is nog niet af" style="width 175px;"
 
 <div id="player">
   <audio autoplay hidden loop>
