--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -19,7 +19,32 @@
 
     <br>
 
-    <img src="" alt="deze site is nog niet af">
+<h1>een bitmap</h1>
+een bitmap is een online afbeelding waarin alle pixels een eigen kleur krijgen. <br>
+Je kan een bitmap eigenlijk zien als een raster met pixels die allemaal een <br>
+eigen kleur krijgen. Dit zie je ook als je inzoemt op een bitmap afbeelding <br>
+dan zie je dat de rande blokjes zijn en niet een mooie lijn. De grote van <br>
+een bitmap is de resolutie van de afbeelding. Een voorbeeld van een bitmap <br>
+is een jpg.
+<br>
+<h1>een vectorafbeelding</h1>
+een vectorafbeelding is een afbeelding die integenstelling tot een bitmap niet <br>
+van pixels is gemaakt, maar van punten. De punten worden verbonden door lijnen <br>
+waardoor er een afbeelding ontstaat. Een bitmap gebruikt een rooster terwijl een <br>
+vectorafbeelding instructies zijn die je aan de computer geeft over waar elk punt <br>
+moet liggen. Hierdoor zie je geen verschil in kwaliteit als je inzoemt op een vectorafbeelding. <br>
+een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg">deze</a> pagina kan je een voorbeeld zien van <br>
+een vectorafbeelding in de vorm van een tijger. Als je inzoemt kan je het verschil zien tussen <br>
+dit plaatje en de afbeelding op deze pagina van dezelfde tijger maar dan in een bitmap.
+<br>
+<h1>opslag beeld en geluid</h1>
+de opslag van geluid word gedaan via een MP3 bestand terwijl beeld via een MP4 <br>
+bestand gaat. In de achtergrond van deze pagina kan je een voorbeeld horen van <br>
+een audio fragment dat is opgeslagen in een MP3 bestand.
+
+    <br>
+
+    <img src="../plaatjes_folder/A-classic-GhostScript-SVG-example.png" alt="een bitmap van een tijger">
 
 <div id="player">
   <audio autoplay hidden loop>
