new page instead of same page

--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -33,7 +33,7 @@ van pixels is gemaakt, maar van punten. De punten worden verbonden door lijnen <
 waardoor er een afbeelding ontstaat. Een bitmap gebruikt een rooster terwijl een <br>
 vectorafbeelding instructies zijn die je aan de computer geeft over waar elk punt <br>
 moet liggen. Hierdoor zie je geen verschil in kwaliteit als je inzoemt op een vectorafbeelding. <br>
-een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg">deze</a> pagina kan je een voorbeeld zien van <br>
+een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg" target="_blank">deze</a> pagina kan je een voorbeeld zien van <br>
 een vectorafbeelding in de vorm van een tijger. Als je inzoemt kan je het verschil zien tussen <br>
 dit plaatje en de afbeelding op deze pagina van dezelfde tijger maar dan in een bitmap.
 <br>
