--- a/html_folder/kleurmodellen.html
+++ b/html_folder/kleurmodellen.html
@@ -15,11 +15,33 @@
       <li><a href="bestandsformaten.html">bestandsformaten</a></li>
       <li><a href="compressie.html">compressie</a></li>
    </ul>
-    <br>
-    
-    uitleg kleurmodellen
 
     <br>
+    
+    <h1>RGB model</h1>
+    het RGB model is een model van de kleuren Rood,Groen en blauw. <br>
+    met dit model kan je alle kleuren maken. Alle kleuren krijgen <br>
+    een eigen code bestaande uit de benodigde aantal kleuren van <br>
+    de basiskleuren. De code bestaat uit een getal dat vaak uit 8 <br>
+    bits bestaat. De getallen kunnen variëren tussen 0 en 255.
+    <br>
+    <h1>CMY-K model</h1>
+    Het CMY-K model wordt gebruikt voor het maken van veel verschillende <br>
+    kleuren door subtractieve kleurmenging. Het wordt vooral gebruikt voor <br>
+    drukinkten. CMY-K staat voor Cyaan, maganta, yellow, key en betekend dat <br>
+    deze kleuren voor alle kleuren zorgen die je ziet. Soms wordt zwart <br>
+    weggelaten, maar dit wordt weinig gebruikt omdat afbeeldingen dan te licht <br>
+    of bruinachtig uitgeprint worden.
+    <h1>pixels en resolutie</h1>
+    Pixels zijn de kleurpunten in een computer. Als er veel bijelkaar <br>
+    komen te staan vormd het een beeld en dus alles wat je op een digitaal <br>
+    beeld ziet is gemaakt van pixels. De resolutie van een afbeelding is hoeveel <br>
+    pixels er in de afbeelding aanwezig zijn. Elke pixel heeft drie kleuren, <br>
+    rood, groen en blauw. De kleuren bijelkaar maken andere kleuren en al de <br>
+    verschillende kleuren bijelkaar worden dan een plaatje.
+
+    <br>
+
     <img src="../plaatjes_folder/rgb-and-cmyk.jpg" alt="kleurmodellen">
 
     <footer>
