--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -24,7 +24,8 @@ het binair stelsel is het stelsel dat computers gebruiken waarin de getalen word
 De 1 en 0 hebben een speciale plaats in de rij. Elke plaats staat voor een macht van 2 in ons stelsel en als je dan de cijfers die <br>
 aan staan dus een 1 hebben bijelkaar optelt krijg je het cijfer in ons stelsel. <br>
 Het binair stelsel wordt gebruikt bij elektronica, omdat het makkelijk is om te implementeren via aan en uit knoppen van de computer.
-een voorbeeld van een binair cijfer is: 1101 is in ons stelsel 13 en dit is hoe je dat kan zien. Van rechts naar links in de rij cijfers staan de 1 en 0 voor onze cijfers 1,2,4,8. De 1,4 en 8 staan aan en dat doe je bij elkaar en dan krijg je: 1+4+8 = 13. En zo werkt het biniar stelsel dus.
+een voorbeeld van een binair cijfer is: 1101 is in ons stelsel 13 en dit is hoe je dat kan zien. Van rechts naar links in de rij cijfers staan de 1 en 0 voor onze cijfers 1,2,4,8. De 1,4 en 8 staan aan en dat doe je bij elkaar en dan krijg je: 1+4+8 = 13. En zo werkt het biniar stelsel dus. <br>
+als je het zelf zou willen proberen kan je het <a href="https://games.penjee.com/binary-bonanza/">hier</a> proberen.
 <br>
 <H1>een ASCII tabel</H1>
 een ASCII of een American Standart code of information tabel is een tabel waarin alle letters en cijfers een eigen code krijgen.<br>
