--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </ul>
 
     <br>
-    Mijn naam is Roland uit H4A en dit is de wibsite die ik heb gemaakt voor informatica.
+    Mijn naam is Roland uit H4A van het vlietlandcollege <br>
+    en dit is de wibsite die ik heb gemaakt voor informatica.
     <br>
    <H1>waarom ik informatica heb gekozen</H1>
    ik heb informatica gekozen, omdat ik graag zou willen weten hoe ik kan <br>
