--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </ul>
 
     <br>
-    Mijn naam is Roland uit H4A van het vlietlandcollege <br>
-    en dit is de wibsite die ik heb gemaakt voor informatica.
+    Mijn naam is Roland uit H4A van het Vlietlandcollege <br>
+    en dit is de website die ik heb gemaakt voor informatica.
     <br>
    <H1>waarom ik informatica heb gekozen</H1>
    ik heb informatica gekozen, omdat ik graag zou willen weten hoe ik kan <br>
-   programeren zodat ik er later iets mee kan gaan doen. Het leuke aan informatica <br>
-   vind ik tot nu toe om te zien dat wat jij zelf hebt gemaakt ook echt werkt als je <br>
+   programmeren zodat ik er later iets mee kan gaan doen. Het leuke aan informatica <br>
+   vind ik tot nu toe om te zien dat wat je zelf hebt gemaakt ook echt werkt als je <br>
    het probeert te gebruiken.
 
    <br>
