--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
 <ul>
   <li><a href="index.html">Homepage</a></li>
-  <li><a href="html_folder/binairstelsel.html">binair stelsel</a></li>
-  <li><a href="html_folder/kleurmodellen.html">kleurmodellen</a></li>
-  <li><a href="html_folder/algemene_informatie.html">algemene informatie</a></li>
-  <li><a href="html_folder/bestandsformaten.html">bestandsformaten</a></li>
-  <li><a href="html_folder/compressie.html">compressie</a></li>
+  <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
+  <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
+  <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
+  <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
+  <li><a href="html_folder/compressie.html">Compressie</a></li>
 </ul>
 
     <br>
