--- a/html_folder/algemene_informatie.html
+++ b/html_folder/algemene_informatie.html
@@ -10,11 +10,11 @@
 
 <ul>
   <li><a href="../index.html">Homepage</a></li>
-  <li><a href="binairstelsel">binair stelsel</a></li>
-  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
-  <li><a href="algemene_informatie.html">algemene informatie</a></li>
-  <li><a href="bestandsformaten.html">bestandsformaten</a></li>
-  <li><a href="compressie.html">compressie</a></li>
+  <li><a href="binairstelsel">Binair stelsel</a></li>
+  <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+  <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+  <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+  <li><a href="compressie.html">Compressie</a></li>
 </ul>
 
     <br>
