--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -9,28 +9,28 @@
   <body>
 <ul>
   <li><a href="../index.html">Homepage</a></li>
-  <li><a href="binairstelsel.html">binair stelsel</a></li>
-  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
-  <li><a href="algemene_informatie.html">algemene informatie</a></li>
-  <li><a href="bestandsformaten.html">bestandsformaten</a></li>
-  <li><a href="compressie.html">compressie</a></li>
+  <li><a href="binairstelsel.html">Binair stelsel</a></li>
+  <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+  <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+  <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+  <li><a href="compressie.html">Compressie</a></li>
 </ul>
     
 <br>
 
 <H1>Hoe werkt het binair stelsel? En hoe reken je het om naar ons stelsel?</H1>
-het binair stelsel is het stelsel dat computers gebruiken waarin de getalen worden veranderd in een rij van de cijfers 1 en 0 <br>
-één zo'n cijfer is een bit, als je dan meerdere bits in een rij zet om een cijfer te maken heb je het over een byte. <br>
-De 1 en 0 hebben een speciale plaats in de rij. Elke plaats staat voor een macht van 2 in ons stelsel en als je dan de cijfers die <br>
-aan staan dus een 1 hebben bijelkaar optelt krijg je het cijfer in ons stelsel. <br>
-Het binair stelsel wordt gebruikt bij elektronica, omdat het makkelijk is om te implementeren via aan en uit knoppen van de computer.
-een voorbeeld van een binair cijfer is: 1101 is in ons stelsel 13 en dit is hoe je dat kan zien. Van rechts naar links in de rij cijfers staan de 1 en 0 voor onze cijfers 1,2,4,8. De 1,4 en 8 staan aan en dat doe je bij elkaar en dan krijg je: 1+4+8 = 13. En zo werkt het biniar stelsel dus. <br>
-als je het zelf zou willen proberen kan je het <a href="https://games.penjee.com/binary-bonanza/">hier</a> proberen.
+Het binair stelsel is het stelsel dat computers gebruiken waarin de getallen worden veranderd in een rij van de cijfers 1 en 0. <br>
+Één zo'n cijfer is een bit, als je dan 8 bits in een rij zet om een cijfer te maken heb je het over een byte. <br>
+De 1 en 0 hebben een speciale plaats in de rij. Elke plaats staat voor een macht van 2 en als je dan de cijfers die <br>
+aan staan, dus een 1 hebben, bij elkaar optelt krijg je het cijfer in ons stelsel. <br>
+Het binair stelsel wordt gebruikt bij elektronica, omdat het makkelijk is om te implementeren via aan en uit knoppen van de computer. <br>
+Een voorbeeld van een binair cijfer is: 1101 is in ons stelsel 13 en dit is hoe je dat kan zien. Van rechts naar links in de rij cijfers staan de 1 en 0 voor onze cijfers 1,2,4,8. De 1,4 en 8 staan aan en dat doe je bij elkaar en dan krijg je: 1+4+8 = 13. En zo werkt het biniar stelsel. <br>
+Als je het zelf zou willen proberen kan je dat <a href="https://games.penjee.com/binary-bonanza/">hier</a> doen.
 <br>
-<H1>een ASCII tabel</H1>
-een ASCII of een American Standart code of information tabel is een tabel waarin alle letters en cijfers een eigen code krijgen.<br>
-Deze codes zijn reeksen van bits. Als je dus iets intypt krijgt de computer een code binnen die gelijkstelt <br>
-aan een code uit het ASCII tabel. De computer weet dan welke letter je wilt en stuurt dat door naar het beeldscherm. <br>
+<H1>Een ASCII tabel</H1>
+In een ASCII tabel of American Standard Code of Information tabel krijgen alle letters en cijfers een eigen code.<br>
+Deze codes zijn reeksen van bits. Als je iets intypt krijgt de computer een code binnen die overeenkomt <br>
+met een code uit de ASCII tabel. De computer weet dan welke letter je wil en stuurt dat door naar het beeldscherm. <br>
 
 
     <br>
