--- a/html_folder/kleurmodellen.html
+++ b/html_folder/kleurmodellen.html
@@ -9,36 +9,37 @@
   <body>
     <ul>
       <li><a href="../index.html">Homepage</a></li>
-      <li><a href="binairstelsel.html">binair stelsel</a></li>
-      <li><a href="kleurmodellen.html">kleurmodellen</a></li>
-      <li><a href="algemene_informatie.html">algemene informatie</a></li>
-      <li><a href="bestandsformaten.html">bestandsformaten</a></li>
-      <li><a href="compressie.html">compressie</a></li>
+      <li><a href="binairstelsel.html">Binair stelsel</a></li>
+      <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+      <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+      <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+      <li><a href="compressie.html">Compressie</a></li>
    </ul>
 
     <br>
     
     <h1>RGB model</h1>
-    het RGB model is een model van de kleuren Rood,Groen en blauw. <br>
-    met dit model kan je alle kleuren maken. Alle kleuren krijgen <br>
-    een eigen code bestaande uit de benodigde aantal kleuren van <br>
-    de basiskleuren. De code bestaat uit een getal dat vaak uit 8 <br>
-    bits bestaat. De getallen kunnen variëren tussen 0 en 255.
+    Het RGB model is een model van de kleuren rood,groen en blauw. <br>
+    Met dit model kan je alle kleuren maken. Alle kleuren krijgen <br>
+    een eigen code bestaande uit de benodigde basiskleuren (RGB). <br>
+    De code bestaat uit een getal dat vaak uit 8 <br>
+    bits bestaat. De getallen voor de basiskleuren kunnen variëren tussen 0 en 255, <br>
+    afhankelijk van de tint van de basiskleur (bijvoorbeeld donkerblauw of lichtblauw)
     <br>
     <h1>CMY-K model</h1>
     Het CMY-K model wordt gebruikt voor het maken van veel verschillende <br>
     kleuren door subtractieve kleurmenging. Het wordt vooral gebruikt voor <br>
-    drukinkten. CMY-K staat voor Cyaan, maganta, yellow, key en betekend dat <br>
+    drukinkten. CMY-K staat voor cyan, magenta, yellow en key en betekent dat <br>
     deze kleuren voor alle kleuren zorgen die je ziet. Soms wordt zwart <br>
     weggelaten, maar dit wordt weinig gebruikt omdat afbeeldingen dan te licht <br>
     of bruinachtig uitgeprint worden.
-    <h1>pixels en resolutie</h1>
-    Pixels zijn de kleurpunten in een computer. Als er veel bijelkaar <br>
-    komen te staan vormd het een beeld en dus alles wat je op een digitaal <br>
-    beeld ziet is gemaakt van pixels. De resolutie van een afbeelding is hoeveel <br>
+    <h1>Pixels en resolutie</h1>
+    Pixels zijn de kleurpunten in een computer. Als er veel bij elkaar <br>
+    komen te staan vormt het een beeld en dus alles wat je op een digitaal <br>
+    beeld ziet is opgebouwd met pixels. De resolutie van een afbeelding is hoeveel <br>
     pixels er in de afbeelding aanwezig zijn. Elke pixel heeft drie kleuren, <br>
-    rood, groen en blauw. De kleuren bijelkaar maken andere kleuren en al de <br>
-    verschillende kleuren bijelkaar worden dan een plaatje.
+    rood, groen en blauw. De kleuren bij elkaar maken andere kleuren en al de <br>
+    verschillende kleuren bij elkaar worden dan een plaatje.
 
     <br>
 
