--- a/html_folder/algemene_informatie.html
+++ b/html_folder/algemene_informatie.html
@@ -28,23 +28,25 @@
 
     <br>
 
-    dit filmpje geeft ons informatie over hoe een computer werkt en wat imput en output zijn. Ik zal nu kort er zelf ook nog even wat over vertellen. <br>
-    <H1>input, output en verwerking van informatie en gegevens</H1>
-    de input van een computer is alles wat een computer van buiten binnenkrijgt. <br>
-    Dit kan verschillende dingen zijn zoals een toetsenboord of muis. <br>
-    De imput wordt van een fysieke beweging of aanraking veranderd in een signaal <br>
+    Dit filmpje geeft ons informatie over hoe een computer werkt en wat imput en output zijn. Ik zal nu kort er zelf ook nog even wat over vertellen. <br>
+    <H1>Input, output en verwerking van informatie en gegevens</H1>
+    De input van een computer is alles wat een computer van buiten binnenkrijgt. <br>
+    De input kan op verschillende manieren in de computer komen, bijvoorbeeld via <br>
+    het indrukken van de toetsen van het toetsenbord of bewegen van de muis. <br>
+    De imput wordt van een fysieke beweging of aanraking verandert dan in een signaal <br>
     dat een computer kan begrijpen. Nadat deze informatie binnen is gekomen <br>
     bij de computer wordt het verwerkt. De CPU voert dan instructies uit die opgeslagen <br>
-    zijn in het geheugen. Als de informatie dan verwerkt is wordt de <br>
-    informatie opgeslagen in de RAM. dit zoorgt ervoor dat de informatie <br>
+    zijn in het geheugen. Als de informatie verwerkt is wordt deze <br>
+    opgeslagen in de RAM. Dit zoorgt ervoor dat de informatie <br>
     snel weer hergebruikt kan worden door de computer als het nodig is. <br>
     Als de informatie langer moet worden opgeslagen wordt het opgeslagen op <br>
     de harde schijf. Nadat de informatie compleet verwerkt is maakt de <br>
     computer een output die hij aan ons mensen kan laten zien. <br>
-    Als je bijvoorbeeld dus een letter intikt op je toetsenboord <br>
-    is de input de knop, daarna zal de computer een signaal krijgen <br>
+    Als je bijvoorbeeld een letter intikt op je toetsenbord <br>
+    is de input het signaal dat volgt na het indrkken van de knop. <br> 
+    Daarna zal de computer een signaal krijgen <br>
     waardoor het weet wat het moet doen en dan stuurt het een signaal <br>
-    terug dat verandert in een letter die wij kunnen lezen.
+    terug dat verandert in een letter die wij kunnen lezen op het scherm.
 
 <footer>
   <div class="container">
