--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -10,35 +10,35 @@
 
 <ul>
   <li><a href="../index.html">Homepage</a></li>
-  <li><a href="binairstelsel">binairstelsel</a></li>
-  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
-  <li><a href="algemene_informatie.html">algemene informatie</a></li>
-  <li><a href="bestandsformaten.html">bestandsformaten</a></li>
-  <li><a href="compressie.html">compressie</a></li>
+  <li><a href="binairstelsel">Binairstelsel</a></li>
+  <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+  <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+  <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+  <li><a href="compressie.html">Compressie</a></li>
 </ul>
 
     <br>
 
-<h1>een bitmap</h1>
-een bitmap is een online afbeelding waarin alle pixels een eigen kleur krijgen. <br>
-Je kan een bitmap eigenlijk zien als een raster met pixels die allemaal een <br>
-eigen kleur krijgen. Dit zie je ook als je inzoemt op een bitmap afbeelding <br>
-dan zie je dat de rande blokjes zijn en niet een mooie lijn. De grote van <br>
+<h1>Een bitmap</h1>
+Een bitmap is een online afbeelding waarin alle pixels een eigen kleur krijgen. <br>
+Je kan een bitmap eigenlijk zien als een raster met pixels. <br>
+Dit zie je ook als je inzoomt op een bitmap afbeelding. <br>
+Dan zie je dat de randen blokjes zijn en niet een mooie lijn. De grootte van <br>
 een bitmap is de resolutie van de afbeelding. Een voorbeeld van een bitmap <br>
 is een jpg.
 <br>
-<h1>een vectorafbeelding</h1>
-een vectorafbeelding is een afbeelding die integenstelling tot een bitmap niet <br>
+<h1>Een vectorafbeelding</h1>
+Een vectorafbeelding is een afbeelding die in tegenstelling tot een bitmap niet <br>
 van pixels is gemaakt, maar van punten. De punten worden verbonden door lijnen <br>
 waardoor er een afbeelding ontstaat. Een bitmap gebruikt een rooster terwijl een <br>
 vectorafbeelding instructies zijn die je aan de computer geeft over waar elk punt <br>
-moet liggen. Hierdoor zie je geen verschil in kwaliteit als je inzoemt op een vectorafbeelding. <br>
-een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg" target="_blank">deze</a> pagina kan je een voorbeeld zien van <br>
-een vectorafbeelding in de vorm van een tijger. Als je inzoemt kan je het verschil zien tussen <br>
-dit plaatje en de afbeelding op deze pagina van dezelfde tijger maar dan in een bitmap.
+moet liggen. Hierdoor zie je geen verschil in kwaliteit als je inzoomt op een vectorafbeelding. <br>
+Een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg" target="_blank">deze</a> pagina kan je een voorbeeld zien van <br>
+een vectorafbeelding in de vorm van een tijger. 
+Hier onder staat hetzelfde plaatje in bitmap. Als je inzoomt op beide plaatjes kun je goed het verschil zien: blokkerig bij de bitmap en scherp bij de vectorafbeelding.
 <br>
-<h1>opslag beeld en geluid</h1>
-de opslag van geluid word gedaan via een MP3 bestand terwijl beeld via een MP4 <br>
+<h1>Opslag beeld en geluid</h1>
+De opslag van geluid wordt gedaan via een MP3 bestand terwijl beeld via een MP4 <br>
 bestand gaat. In de achtergrond van deze pagina kan je een voorbeeld horen van <br>
 een audio fragment dat is opgeslagen in een MP3 bestand.
 
@@ -49,7 +49,7 @@ een audio fragment dat is opgeslagen in een MP3 bestand.
 <div id="player">
   <audio autoplay hidden loop>
     <source src="../Free_Test_Data_1MB_MP3.mp3" type="audio/mpeg">
-        als je dit leest speelt de test muziek voor de website niet
+        Als je dit leest speelt de test muziek voor de website niet
   </audio>
 </div>
 
