--- a/html_folder/compressie.html
+++ b/html_folder/compressie.html
@@ -10,40 +10,42 @@
 
 <ul>
   <li><a href="../index.html">Homepage</a></li>
-  <li><a href="binairstelsel">binair stelsel</a></li>
-  <li><a href="kleurmodellen.html">kleurmodellen</a></li>
-  <li><a href="algemene_informatie.html">algemene informatie</a></li>
-  <li><a href="bestandsformaten.html">bestandsformaten</a></li>
-  <li><a href="compressie.html">compressie</a></li>
+  <li><a href="binairstelsel">Binair stelsel</a></li>
+  <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
+  <li><a href="algemene_informatie.html">Algemene informatie</a></li>
+  <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
+  <li><a href="compressie.html">Compressie</a></li>
 </ul>
 
     <br>
 
-<H1>wat is compressie</H1>
-Compressie is het weergeven van gegevens dan hoe de oorspronkelijke <br>
-weergave eruitzag. Er zijn twee typen compressie, exact omkeerbaar <br>
-en niet-exact omkeerbaar.
+<H1>Wat is compressie</H1>
+Compressie is het verkleinen van gegevens zodat ze minder ruime innemen <br>
+Er zijn twee typen compressie: exact omkeerbaar en niet-exact omkeerbaar.
 <br>
-<H1>exact omkeerbaare compressie</H1>
-Bij dit type compressie wordt er een exact kopie gemaakt van het origineel. <br>
-Dit wordt voraal gebruikt voor tekstbestanden, omdat je daar geen tekst gewoon <br>
-kan verwijderen. Exact omkeerbaare compressie wordt gedaan door vaak voorkomende <br>
+<H1>Exact omkeerbaare compressie</H1>
+Bij dit type compressie wordt er een exacte kopie gemaakt van het origineel. <br>
+Dit wordt vooral gebruikt voor tekst- en programmabestanden, omdat je de tekst niet <br>
+inhoudelijk wil aanpassen. Exact omkeerbaare compressie wordt gedaan door vaak voorkomende <br>
 letters of woorden een eigen code van bits met een bepaalde bitlengte te geven. <br>
 De meest vookomende woorden of letters krijgen dan de kortste code terwijl de <br>
 minst voorkomende woorden of letters een lange code krijgen.
 <br>
-<H1>Niet exact omkeerbaare compressie</H1>
-Dit type compressie wordt voral gebruikt bij beeld of geluid. Hierbij wordt wel <br>
-informatie weggelaten zodat het plaatje of geluid kleiner wordt. de compressie <br>
-verwijderd de overbodige informatie. Een voorbeeld is als een bestand meer éénen <br>
-dan nullen heeft of andersom. De extra éénen of nullen worden dan met compressie <br>
+<H1>Niet-exact omkeerbaare compressie</H1>
+Dit type compressie wordt vooral gebruikt bij beeld of geluid. Hierbij wordt wel <br>
+informatie weggelaten zodat het plaatje of geluid kleiner wordt. De compressie <br>
+verwijdert overbodige informatie. Een voorbeeld is als een bestand meer enen <br>
+dan nullen heeft of andersom. De extra enen of nullen worden dan met compressie <br>
 verwijderd zodat het bestand kleiner wordt. Hoe goed de compressie bij dit type <br>
 zal werken ligt aan hoe het bestand er van binnen uitziet. Als een bestand al een <br>
-keer door compressie heen is gegaan zal bij een tweede keer niks of weinig veranderen <br>
-als het bestand een patroon heeft zal het veel beter te comprimeren zijn. <br>
-Voorbeelden van niet exact omkeerbaare compressiealgoritmes zijn bijvoorbeeld JPEG waarbij <br>
-de kwaliteit verlaagd wordt, MP3 en AAC worden gebruikt voor geluidsbestanden en MPEG-2 <br>
-wordt gebruikt voor videobestanden en voor dvd of DVB.
+keer door compressie heen is gegaan zal bij een tweede keer niks of weinig veranderen. <br>
+Als het bestand een patroon heeft zal het veel beter te comprimeren zijn. <br>
+Voorbeelden van niet exact omkeerbaare compressiealgoritmes zijn:
+<ul>
+  <li>JPEG, waarbijde kwaliteit verlaagd wordt. </li>
+  <li>MP3 en AAC worden gebruikt voor geluidsbestanden. </li>
+  <li>MPEG-2 wordt gebruikt voor videobestanden en voor dvd of DVB. </li>
+</ul>
 
     <br>
 
