--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -35,7 +35,8 @@ vectorafbeelding instructies zijn die je aan de computer geeft over waar elk pun
 moet liggen. Hierdoor zie je geen verschil in kwaliteit als je inzoomt op een vectorafbeelding. <br>
 Een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg" target="_blank">deze</a> pagina kan je een voorbeeld zien van <br>
 een vectorafbeelding in de vorm van een tijger. 
-Hier onder staat hetzelfde plaatje in bitmap. Als je inzoomt op beide plaatjes kun je goed het verschil zien: blokkerig bij de bitmap en scherp bij de vectorafbeelding.
+Hier onder staat hetzelfde plaatje in bitmap. <br> 
+Als je inzoomt op beide plaatjes kun je goed het verschil zien: blokkerig bij de bitmap en scherp bij de vectorafbeelding.
 <br>
 <h1>Opslag beeld en geluid</h1>
 De opslag van geluid wordt gedaan via een MP3 bestand terwijl beeld via een MP4 <br>
