--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     Mijn naam is Roland uit H4A van het Vlietlandcollege <br>
     en dit is de website die ik heb gemaakt voor informatica.
     <br>
-   <H1>waarom ik informatica heb gekozen</H1>
-   ik heb informatica gekozen, omdat ik graag zou willen weten hoe ik kan <br>
+   <H1>Waarom ik informatica heb gekozen</H1>
+   Ik heb informatica gekozen, omdat ik graag zou willen weten hoe ik kan <br>
    programmeren zodat ik er later iets mee kan gaan doen. Het leuke aan informatica <br>
    vind ik tot nu toe om te zien dat wat je zelf hebt gemaakt ook echt werkt als je <br>
    het probeert te gebruiken.
