--- a/html_folder/algemene_informatie.html
+++ b/html_folder/algemene_informatie.html
@@ -24,7 +24,7 @@
 
     <br>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/mCq8-xTH7jA?si=h4RDY7D7EhGCoqzY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/mCq8-xTH7jA?si=h4RDY7D7EhGCoqzY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <!--deze code zoorgt ervoor dat het filmpje als plaatje op de site verschijnt-->
 
     <br>
 
