--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -33,7 +33,7 @@ van pixels is gemaakt, maar van punten. De punten worden verbonden door lijnen <
 waardoor er een afbeelding ontstaat. Een bitmap gebruikt een rooster terwijl een <br>
 vectorafbeelding instructies zijn die je aan de computer geeft over waar elk punt <br>
 moet liggen. Hierdoor zie je geen verschil in kwaliteit als je inzoomt op een vectorafbeelding. <br>
-Een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg" target="_blank">deze</a> pagina kan je een voorbeeld zien van <br>
+Een voorbeeld van een vectorafbeelding is een svg. Op <a href="https://upload.wikimedia.org/wikipedia/commons/f/fd/Ghostscript_Tiger.svg" target="_blank">deze</a> pagina kan je een voorbeeld zien van <br> <!--de code die in de zin staat maakt een hyperlink aan zodat je naar een andere pagina beweegt-->
 een vectorafbeelding in de vorm van een tijger. 
 Hier onder staat hetzelfde plaatje in bitmap. <br> 
 Als je inzoomt op beide plaatjes kun je goed het verschil zien: blokkerig bij de bitmap en scherp bij de vectorafbeelding.
@@ -48,9 +48,9 @@ een audio fragment dat is opgeslagen in een MP3 bestand.
     <img src="../plaatjes_folder/A-classic-GhostScript-SVG-example.png" alt="een bitmap van een tijger">
 
 <div id="player">
-  <audio autoplay hidden loop>
+  <audio autoplay hidden loop> <!--het audio element zoorgt ervoor dat de computer weet dat het audio moet afspelen-->
     <source src="../Free_Test_Data_1MB_MP3.mp3" type="audio/mpeg">
-        Als je dit leest speelt de test muziek voor de website niet
+        Als je dit leest speelt de test muziek voor de website niet <!--deze tekst komt tevoorschijn als de muziek het niet doet-->
   </audio>
 </div>
 
