--- a/html_folder/compressie.html
+++ b/html_folder/compressie.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+<!DOCTYPE html> <!--de doctype zoorgt ervoor dat de computer weet dat de website in html is geschreven-->
 <html>
   <head>
     <title>het eerste begin </title>
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-<ul>
+<ul> <!--de ul laat zien dat de lijst ongeorderd is-->
   <li><a href="../index.html">Homepage</a></li>
   <li><a href="binairstelsel">Binair stelsel</a></li>
   <li><a href="kleurmodellen.html">Kleurmodellen</a></li>
@@ -49,14 +49,14 @@ Voorbeelden van niet exact omkeerbaare compressiealgoritmes zijn:
 
     <br>
 
-    <img src="../plaatjes_folder/JPEGImageDeblockingUsingDeepLearningExample_01.png" alt="voorbeeld compressie JPEG">
+    <img src="../plaatjes_folder/JPEGImageDeblockingUsingDeepLearningExample_01.png" alt="voorbeeld compressie JPEG"> <!--deze code zoorgt ervoor dat er een plaatje tevoorschijn komt op de website-->
 
-<footer>
+<footer> <!--de footer laat weten dat er een footer moet komen op de website-->
   <div class="container">
     <p>&copy ; 2023 school project</p>
     <p>contact: roland.slagter@vlietlandcollege.nl</p>
   </div>
 </footer>
     
-  </body>
+  </body> <!--de body is waar alles instaat wat je kan zien op de website-->
 </html>
