--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
   <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="html_folder/compressie.html">Compressie</a></li>
+  <li><a href="linear_search">linear search</a></li>
 </ul>
 
     <br>
