--- a/linear_search.html
+++ b/linear_search.html
@@ -1,5 +1,16 @@
 <html>
     <body>
+
+        <ul>
+  <li><a href="index.html">Homepage</a></li>
+  <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
+  <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
+  <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
+  <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
+  <li><a href="html_folder/compressie.html">Compressie</a></li>
+  <li><a href="linear_search">linear search</a></li>
+</ul>
+        
         <script>
     var getallen = new Array(50);
     var plek;
