--- a/linear_search.html
+++ b/linear_search.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+         <title> linear search </title>
+        <link rel="stylesheet" type="text/css" href="opmaak.css">
+        <meta charset="utf-8">
+    </head>
     <body>
 
 <ul>
