--- a/html_folder/binairstelsel.html
+++ b/html_folder/binairstelsel.html
@@ -14,6 +14,7 @@
   <li><a href="algemene_informatie.html">Algemene informatie</a></li>
   <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="compressie.html">Compressie</a></li>
+  <li><a href="../linear_search.html">linear search</a></li>
 </ul>
     
 <br>
