--- a/linear_search.html
+++ b/linear_search.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-
+<button type="button" onclick ="history go(o)">start linear search opnieuw op</button>
+        
 <ul>
   <li><a href="index.html">Homepage</a></li>
   <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
@@ -18,6 +19,7 @@
 </ul>
         
         <script>
+            function main {
     var getallen = new Array(50);
     var plek;
     var zoeken;
@@ -50,6 +52,7 @@
         // als het algoritme niet bij het einde van de lijst is gekomen is het gestopt bij het gezochte getal en zal een bericht geven over waar het getal zich bevind
         window.alert(zoeken.toString() + " zit op plek " + plek);
     }
+            }
 
         </script>
     </body>
