--- a/linear_search.html
+++ b/linear_search.html
@@ -17,7 +17,7 @@
   <li><a href="linear_search">linear search</a></li>
 </ul>
 
-        <button type="button" onclick ="history go(o)">start linear search opnieuw op</button>
+        <button type="button" onclick ="history.go(o)">start linear search opnieuw op</button>
         
         <script>
     var getallen = new Array(50);
