--- a/linear_search.html
+++ b/linear_search.html
@@ -17,7 +17,9 @@
   <li><a href="linear_search">linear search</a></li>
 </ul>
 
-        <button type="button" onclick ="history.go(o)">start linear search opnieuw op</button>
+<br>
+<br>
+        hier kan je linear search gebruiken, als je het programma opnieuw wilt gebruiken kan je de pagina herladen om zo het programma te reseten.
         
         <script>
     var getallen = new Array(50);
