--- a/linear_search.html
+++ b/linear_search.html
@@ -19,9 +19,9 @@
 
 <br>
 <br>
-        hier kan je linear search gebruiken, als je het programma opnieuw wilt gebruiken kan je de pagina herladen om zo het programma te reseten.
         
         <script>
+            function linear_search() {
     var getallen = new Array(50);
     var plek;
     var zoeken;
@@ -53,7 +53,11 @@
         // als het algoritme niet bij het einde van de lijst is gekomen is het gestopt bij het gezochte getal en zal een bericht geven over waar het getal zich bevind
         window.alert(zoeken.toString() + " zit op plek " + plek);
     }
+            }
 
         </script>
+
+<button onclick="linear_search()"> herstart linear search </button>
+        
     </body>
 </html>
