--- a/linear_search.html
+++ b/linear_search.html
@@ -57,7 +57,7 @@
 
         </script>
 
-<button onclick="linear_search()"> herstart linear search </button>
+<button onclick="linear_search()"> linear search </button>
         
     </body>
 </html>
