--- a/linear_search.html
+++ b/linear_search.html
@@ -58,6 +58,8 @@
         </script>
 
 <button onclick="linear_search()"> linear search </button>
+        <br>
+        op deze pagina kan je linear search gebruiken, klik op de knop om het programma te laten werken.
         
     </body>
 </html>
