--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="html_folder/compressie.html">Compressie</a></li>
   <li><a href="linear_search">linear search</a></li>
+  <li><a href="bubble_sort"> bubble sort</a></li>
 </ul>
 
     <br>
