--- a/html_folder/bestandsformaten.html
+++ b/html_folder/bestandsformaten.html
@@ -16,6 +16,7 @@
   <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="compressie.html">Compressie</a></li>
   <li><a href="../linear_search.html">linear search</a></li>
+  <li><a href="../bubble_sort"> bubble sort</a></li>
 </ul>
 
     <br>
