--- a/bubble_sort.html
+++ b/bubble_sort.html
@@ -8,7 +8,8 @@
   <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
   <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="html_folder/compressie.html">Compressie</a></li>
-  <li><a href="linear_search">linear search</a></li>
+  <li><a href="linear_search.html">linear search</a></li>
+  <li><a href="bubble_sort.html">bubble sort</li>
 </ul>
         
         <script>
