--- a/linear_search.html
+++ b/linear_search.html
@@ -14,8 +14,8 @@
   <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
   <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="html_folder/compressie.html">Compressie</a></li>
-  <li><a href="linear_search">linear search</a></li>
-  <li><a href="bubble_sort"> bubble sort</a></li>
+  <li><a href="linear_search.html">linear search</a></li>
+  <li><a href="bubble_sort.html"> bubble sort</a></li>
 </ul>
 
 <br>
