--- a/bubble_sort.html
+++ b/bubble_sort.html
@@ -13,7 +13,7 @@
 </ul>
         
         <script>
-    var opnieuw;
+    function bubble_sort () {
     var rondes;
     var aantal;
     var richting;
@@ -77,10 +77,11 @@
 
     // als het programma klaar is dan kan het programma zich resetten en kan je als je wilt het programma opnieuw gebruiken
     if (opnieuw == "ja") {
-        window.alert("het algoritme zal opnieuw opgestart worden.");
+        window.alert("het algoritme zal opnieuw opgestart worden als je de knop indrukt.");
         main();
     } else {
         window.alert("helaas, fijne dag verder nog.");
+    }
     }
 
         </script>
