--- a/linear_search.html
+++ b/linear_search.html
@@ -20,6 +20,10 @@
 
 <br>
 <br>
+        <button onclick="linear_search()"> linear search </button>
+        <br>
+        <br>
+        op deze pagina kan je bubble sort gebruiken, klik op de knop om het programma te laten werken.
         
         <script>
             function linear_search() {
