--- a/bubble_sort.html
+++ b/bubble_sort.html
@@ -11,6 +11,13 @@
   <li><a href="linear_search.html">linear search</a></li>
   <li><a href="bubble_sort.html">bubble sort</li>
 </ul>
+       <br>
+        <br>
+        
+        <button onclick="linear_search()"> linear search </button>
+        <br>
+        <br>
+        op deze pagina kan je bubble sort gebruiken, klik op de knop om het programma te laten werken.
         
         <script>
     function bubble_sort () {
