--- a/bubble_sort.html
+++ b/bubble_sort.html
@@ -1,4 +1,9 @@
 <html>
+    <head>
+         <title>het eerste begin </title>
+    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <meta charset="utf-8">
+    </head>
     <body>
 
 <ul>
