--- a/bubble_sort.html
+++ b/bubble_sort.html
@@ -98,5 +98,12 @@
     }
 
         </script>
+
+          <button onclick="bubble_sort()"> bubble sort </button>
+        <br>
+        <br>
+        
+        op deze pagina kan je bubble sort gebruiken, klik op de knop om het programma te laten werken.
+        
     </body>
 </html>
