--- a/bubble_sort.html
+++ b/bubble_sort.html
@@ -14,7 +14,8 @@
   <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
   <li><a href="html_folder/compressie.html">Compressie</a></li>
   <li><a href="linear_search.html">linear search</a></li>
-  <li><a href="bubble_sort.html">bubble sort</li>
+  <li><a href="bubble_sort.html">bubble sort</a></li>
+  <li><a href="binary_search.html">binary search</a></li>
 </ul>
        <br>
         <br>
