--- a/binary_search.html
+++ b/binary_search.html
@@ -1,5 +1,18 @@
 <html>
     <body>
+
+<ul>
+  <li><a href="index.html">Homepage</a></li>
+  <li><a href="html_folder/binairstelsel.html">Binair stelsel</a></li>
+  <li><a href="html_folder/kleurmodellen.html">Kleurmodellen</a></li>
+  <li><a href="html_folder/algemene_informatie.html">Algemene informatie</a></li>
+  <li><a href="html_folder/bestandsformaten.html">Bestandsformaten</a></li>
+  <li><a href="html_folder/compressie.html">Compressie</a></li>
+  <li><a href="linear_search.html">linear search</a></li>
+  <li><a href="bubble_sort.html">bubble sort</a></li>
+  <li><a href="binary_search.html">binary search</a></li>
+</ul>
+        
         <script>
     var aantalgokken;
     var gokgetal;
