--- a/binary_search.html
+++ b/binary_search.html
@@ -19,6 +19,7 @@
 </ul>
         
         <script>
+            function binary_search() {
     var aantalgokken;
     var gokgetal;
     var zoekgetal;
@@ -96,11 +97,12 @@
 
     // het programma kan opnieuw gebruikt worden
     if (opnieuw == "ja") {
-        window.alert("het programma zal opnieuw opgestart worden.");
+        window.alert("het programma kan opnieuw opgestart worden door op dezelfde knop te klikken.");
         main();
     } else {
         window.alert("helaas, fijne dag verder nog.");
     }
+        }
         </script>
     </body>
 </html>
