--- a/html_folder/kleurmodellen.html
+++ b/html_folder/kleurmodellen.html
@@ -15,7 +15,8 @@
       <li><a href="bestandsformaten.html">Bestandsformaten</a></li>
       <li><a href="compressie.html">Compressie</a></li>
       <li><a href="../linear_search.html">linear search</a></li>
-      <li><a href="../bubble_sort"> bubble sort</a></li>
+      <li><a href="../bubble_sort.html"> bubble sort</a></li>
+      <li><a href=".../binary_search.html"> binary search</a></li>
    </ul>
 
     <br>
