--- a/binary_search.html
+++ b/binary_search.html
@@ -17,6 +17,13 @@
   <li><a href="bubble_sort.html">bubble sort</a></li>
   <li><a href="binary_search.html">binary search</a></li>
 </ul>
+        <br>
+        <br>
+
+         <button onclick="binary_search()"> binary search </button>
+        <br>
+        <br>
+        op deze pagina kan je binary search gebruiken, klik op de knop om het programma te laten werk
         
         <script>
             function binary_search() {
